fix(components/Navigation): align center items (#7885)

--- a/src/components/Navigation/components/NavigationSectionItem.less
+++ b/src/components/Navigation/components/NavigationSectionItem.less
@@ -12,6 +12,8 @@
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
+        display: flex;
+        align-items: center;
 
         &:hover {
             outline: none;
